--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2599,7 +2599,7 @@
 
 /* One */
 
-	#one:before {
+	/* #one:before {
 		background-image: url("../../images/banner.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
@@ -2608,7 +2608,7 @@
 		display: block;
 		height: 15em;
 		width: 100%;
-	}
+	} */
 
 /* Footer */
 
